# NovaCoreAI

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  AUDIT_SUMMARY.txt  AUTH_BILLING_FIXES_PROGRESS.md  AUTH_BILLING_FORENSIC_AUDIT.md  FRONTEND_FORENSIC_AUDIT.md  FRONTEND_IMPLEMENTATION_PROGRESS.md  GAP_ANALYSIS_PHASE_1-8.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  NGS_Curriculum.md  PHASE_10_FINAL_SUMMARY.md  PHASE_10_IMPLEMENTATION.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_FINAL_REPORT.md  PHASE_5_6_7_8_COMPLETION.md  PHASE_9_COMPLETION.md  PHASE_9_FINAL_SUMMARY.md  README.md  TESTING_PROGRESS.md  TOKEN_REFRESH_VERIFICATION.md  credentials.csv  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  env.example  replit.md  test-registration.mjs  validate_implementations.py
.github/: SECRETS_SETUP.md
attached_assets/: AgencyFeature_Notes_1762667688921.docx  CognativeMem_Notes_1762667688921.docx  NovaCoreAI_1762667057518.txt  Pasted-Noble-NovaCoreAI-Mission-Vision-Noble-NovaCoreAI-is-not-another-chatbot-or-AI-assistant-It-s-a-1762666717594_1762666717594.txt  noble_agent_docs_1762667688921.md  noble_growth_docs_1762667688921.md
docs/: API_REFERENCE.md  ARCHITECTURAL_IMPROVEMENTS.md  CYBERSECURITY_COMPLETION_REPORT.md  DEPLOYMENT.md  DETAILED_ISSUES_APPENDIX.md  DEVOPS_COMPLETION_REPORT.md  EXECUTIVE_SUMMARY_2025.md  QUICKSTART.md  (+32 more)
services/mcp-server/: Cargo.toml  Dockerfile  README.md
services/mcp-server/src/: config.rs  errors.rs  main.rs  metrics.rs  middleware.rs  models.rs  routes.rs  services.rs
(+464 files in other folders)
