[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for service integration
reqwest = { version = "0.12", features = ["json"] }

# Logging
env_logger = "0.11"
log = "0.4"

# UUID support
uuid = { version = "1.11", features = ["serde", "v4"] }

# JWT validation
jsonwebtoken = "9.3"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# DateTime
chrono = { version = "0.4", features = ["serde"] }
